--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-blockly": "^7.0.0-alpha.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
